[package]
name = "cforces-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib/mod.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cforces-rs"
path = "src/main.rs"
test = false

[dependencies]
serde_json = "1.0.145"
rand = "0.9.2"

[dev-dependencies]
proptest = "1.9.0"
